Fix sidebar's item alignment: History

--- a/style.css
+++ b/style.css
@@ -214,7 +214,7 @@ header {
 
    .brand {
       font-weight: bold;
-      font-size: 1.7rem;
+      font-size: 1.6rem;
 
       .logo {
          margin-right: 8px;
@@ -244,6 +244,9 @@ header {
 
          i {
             margin-right: 16px;
+         }
+         i.history {
+            margin-right: 22px;
          }
       }
    }
